--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.1",
     "clsx": "^2.1.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
