--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
